Spacing Fix on Project Page

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -177,7 +177,7 @@
 
  .ProjectPage {
   border-bottom: 4px solid black;
-  margin: 0.5rem -0.3rem 0 -0.3rem;
+  margin: -0.5rem -0.3rem 0 -0.3rem;
   padding: 2rem;
   padding-bottom: 0.5rem;
 }
